--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,6 +32,7 @@
   <div id="root"></div>
   <div id="popupAlert"></div>
   <div id="application"></div>
+  <div id="userEditPopUp"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
